# django-chat-app

./: README.md  pyproject.toml
chat/: consumers.py  routing.py  urls.py  views.py
chat/templates/chat/: index.html
django_core/: asgi.py  settings.py  urls.py  wsgi.py
templates/chat/: index.html  login_page.html
