[tool.poetry]
name = "django-chat-app"
version = "0.1.0"
description = ""
authors = ["tokitou-san <tokitousan2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.8"
channels = {extras = ["daphne"], version = "^4.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
